styles/css/vtex.search-result.css
/* ... */
:global(.vtex-search-result-3-x-buttonShowMore--layout)
:global(.vtex-button) {
  margin-bottom: 10px;
  font-family: 'RobotoRegular';
}

:global(.vtex-search-result-3-x-orderByOptionsContainer) {
  z-index: 998;
} 
:global(.vtex-flex-layout-0-x-flexRow--desc-row){
  height: 100%!important;
}

